package dp.observer.interfaces;

public interface Hauptgericht {
    // das abstrakte Produkt "Hauptgericht"
    Integer getId();
    void setId(Integer id);
    void warmLiefern();
}
